# VEDA_BankManagement

./: CMakeLists.txt  README.md  account.cpp  account.h  deposit.cpp  deposit.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.ui  manager.cpp  manager.h  managerwidget.cpp  managerwidget.h  managerwidget.ui  person.cpp  person.h  person_data.txt  saving.cpp  saving.h  showproducts.cpp  showproducts.h  showproducts.ui  signupwidget.cpp  signupwidget.h  signupwidget.ui  textfile.qrc  user.cpp  user.h  userwidget.cpp  userwidget.h  userwidget.ui  utility.cpp  utility.h  widgetcontroller.cpp  widgetcontroller.h
